--- a/RGB/Storyboards/Base.lproj/Main.storyboard
+++ b/RGB/Storyboards/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FHa-r7-RPj">
-                                <rect key="frame" x="16" y="20" width="288" height="130.5"/>
+                                <rect key="frame" x="16" y="20" width="288" height="102"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -66,7 +66,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Gdl-5a-9ek">
-                                <rect key="frame" x="16" y="170.5" width="288" height="142"/>
+                                <rect key="frame" x="16" y="138" width="288" height="142"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="NkH-TY-Tzf">
                                         <rect key="frame" x="0.0" y="0.0" width="55" height="142"/>
@@ -192,17 +192,31 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwR-zN-cgp">
+                                <rect key="frame" x="120" y="460" width="80" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="lwR-zN-cgp" secondAttribute="height" multiplier="5:3" id="Fko-ij-PH9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="26"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.19285587727090914" green="0.19476534140230428" blue="0.19476534140230428" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Gdl-5a-9ek" secondAttribute="trailing" constant="16" id="MqT-od-8kd"/>
-                            <constraint firstItem="FHa-r7-RPj" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.23" id="NUC-hb-yMP"/>
+                            <constraint firstItem="FHa-r7-RPj" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.18" id="NUC-hb-yMP"/>
                             <constraint firstItem="FHa-r7-RPj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="O89-Lq-ilT"/>
+                            <constraint firstItem="lwR-zN-cgp" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.084507" id="UM0-Xb-3jD"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FHa-r7-RPj" secondAttribute="trailing" constant="16" id="XLK-cP-amh"/>
+                            <constraint firstItem="lwR-zN-cgp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ywb-U2-KVv"/>
                             <constraint firstItem="Gdl-5a-9ek" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="bUb-X2-1qf"/>
                             <constraint firstItem="FHa-r7-RPj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="dnD-yr-l2p"/>
-                            <constraint firstItem="Gdl-5a-9ek" firstAttribute="top" secondItem="FHa-r7-RPj" secondAttribute="bottom" constant="20" id="yF2-M0-l8l"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lwR-zN-cgp" secondAttribute="bottom" constant="60" id="pwA-Yp-tTl"/>
+                            <constraint firstItem="Gdl-5a-9ek" firstAttribute="top" secondItem="FHa-r7-RPj" secondAttribute="bottom" constant="16" id="yF2-M0-l8l"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QOK-z6-6Ur"/>
@@ -221,7 +235,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133" y="2"/>
+            <point key="canvasLocation" x="131.25" y="1.056338028169014"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9jV-vc-7aK">
